--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotted-map": "^2.2.3",
     "firebase": "^11.10.0",
     "lucide-react": "^0.525.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.23.3",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
