--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-VITE_FIREBASE_API_KEY=your_api_key
-VITE_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=your_project_id
-VITE_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
-VITE_FIREBASE_APP_ID=your_app_id
+VITE_FIREBASE_API_KEY=AIzaSyAh2WfrJIXhtEaT3mb2nNdQgeCRaGOIGzw
+VITE_FIREBASE_PROJECT_ID=aska-67646
+VITE_FIREBASE_AUTH_DOMAIN=aska-67646.firebaseapp.com
+VITE_FIREBASE_STORAGE_BUCKET=aska-67646.firebasestorage.app
+
+VITE_FIREBASE_MESSAGING_SENDER_ID=830018075199
+VITE_FIREBASE_APP_ID=1:830018075199:web:95293f56c48d711c74168a
+
